updated signup page added social logins

--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -472,8 +472,8 @@
       <div class="terms-checkbox">
         <input type="checkbox" name="terms" id="id_terms" required>
         <label for="id_terms">
-          I agree to the <a href="{% url 'terms_of_service' %}">Terms of Service</a> 
-          and <a href="{% url 'privacy_policy' %}">Privacy Policy</a>. I understand 
+          I agree to the <a href="{% url 'memorials:terms_and_conditions' %}">Terms of Service</a> 
+          and <a href="{% url 'memorials:privacy_policy' %}">Privacy Policy</a>. I understand 
           that my memories and data will be handled with care and respect.
         </label>
       </div>
